--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   uuid: ^4.2.2
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.10
+  firebase_app_check: ^0.2.1+15
 
 dev_dependencies:
   flutter_test:
