--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
-  firebase_storage: ^11.5.6
+  supabase_flutter: ^2.3.4
   image_picker: ^1.0.7
   flutter_localizations:
     sdk: flutter
@@ -50,7 +47,7 @@ dependencies:
   uuid: ^4.2.2
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.10
-  firebase_app_check: ^0.2.1+15
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +59,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
