--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
+  url_launcher: ^6.2.5
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
